--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Scenes/NewMap.NewMap
 GameDefaultMap=/Game/Scenes/NewMap.NewMap
-GlobalDefaultGameMode="/Script/Escape.EscapeGameMode"
+GlobalDefaultGameMode=/Game/MyEscapeGameModeBase_BP.MyEscapeGameModeBase_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
